log/build_2024-02-23_06-37-21/my_py_pkg/stderr.log
  File "/home/jt/ros2_ws/install/my_py_pkg/lib/python3.10/site-packages/my_py_pkg/add_two_ints_server.py", line 16
    str(request.a) " + " str(request.b) " = " str(response.sum))
    ^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?

